--- a/app/src/main/res/layout/activity_department.xml
+++ b/app/src/main/res/layout/activity_department.xml
@@ -5,42 +5,12 @@
     android:layout_width="match_parent"
     android:background="@color/midnight"
     android:layout_height="match_parent"
-    tools:context=".PatientDashboard">
+    tools:context=".Department">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <RelativeLayout
-            android:layout_marginTop="32dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/emailIdHide"
-                android:textSize="21dp"
-                android:textColor="#FFFFFF"
-                android:visibility = "gone"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-            <TextView
-                android:textSize="24dp"
-                android:textColor="#FFFFFF"
-                android:text="Patient Dashboard"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-            <ImageView
-                android:id="@+id/logout"
-                android:layout_alignParentRight="true"
-                android:src="@drawable/logout"
-                android:layout_width="62dp"
-                android:layout_height="62dp"/>
-
-
-        </RelativeLayout>
 
         <GridLayout
             android:columnCount="2"
@@ -63,21 +33,21 @@
                     android:orientation="vertical"
                     android:gravity="center"
                     android:padding="16dp"
-                    android:onClick="sendCall2"
+                    android:onClick="department1"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     tools:ignore="OnClick">
 
                     <ImageView
-                        android:src="@drawable/user"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"/>
+                        android:layout_width="98dp"
+                        android:layout_height="81dp"
+                        android:src="@drawable/gs" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="User Profile"
+                        android:text="Gastrologist"
                         android:textSize="18dp"
                         android:textColor="#6f6f6f"/>
 
@@ -98,21 +68,21 @@
                     android:orientation="vertical"
                     android:gravity="center"
                     android:padding="16dp"
-                    android:onClick="sendCall4"
+                    android:onClick="department2"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     tools:ignore="OnClick">
 
                     <ImageView
-                        android:src="@drawable/hs"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"/>
+                        android:layout_width="90dp"
+                        android:layout_height="79dp"
+                        android:src="@drawable/eye" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Health Services"
+                        android:text="Eye Specialist"
                         android:textSize="18dp"
                         android:textColor="#6f6fff"/>
 
@@ -132,19 +102,90 @@
                     android:orientation="vertical"
                     android:gravity="center"
                     android:padding="16dp"
+                    android:onClick="department3"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    tools:ignore="OnClick">
 
                     <ImageView
-                        android:src="@drawable/appoi"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"/>
+                        android:layout_width="109dp"
+                        android:layout_height="98dp"
+                        android:src="@drawable/ent" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="Appointment Status"
+                        android:text="ENT Specialist"
+                        android:textColor="#6f6f6f"
+                        android:textSize="18dp" />
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:padding="16dp"
+                    android:onClick="department4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:ignore="OnClick">
+
+                    <ImageView
+                        android:layout_width="90dp"
+                        android:layout_height="93dp"
+                        android:src="@drawable/gyno" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:text="Gynecologist"
+                        android:textSize="18dp"
+                        android:textColor="#6f6f6f"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:gravity="center"
+                    android:padding="16dp"
+                    android:onClick="department5"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    tools:ignore="OnClick">
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="86dp"
+                        android:src="@drawable/teeth" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="12dp"
+                        android:text="Dentist"
                         android:textColor="#6f6f6f"
                         android:textSize="18dp" />
 
@@ -164,26 +205,27 @@
                     android:orientation="vertical"
                     android:gravity="center"
                     android:padding="16dp"
+                    android:onClick="department6"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    tools:ignore="OnClick">
 
                     <ImageView
-                        android:src="@drawable/ps"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"/>
+                        android:layout_width="118dp"
+                        android:layout_height="87dp"
+                        android:src="@drawable/heart1" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
-                        android:text="My Prescription"
+                        android:text="Cardiologist"
                         android:textSize="18dp"
                         android:textColor="#6f6f6f"/>
 
                 </LinearLayout>
 
             </androidx.cardview.widget.CardView>
-
         </GridLayout>
 
     </LinearLayout>
