--- a/app/src/main/res/layout/activity_e_n_tspecialist__department.xml
+++ b/app/src/main/res/layout/activity_e_n_tspecialist__department.xml
@@ -1,9 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:background="@color/midnight"
+android:layout_height="match_parent"
+android:layout_gravity="top"
+tools:context=".Gynecologist_Department">
+
+
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ENTspecialist_Department">
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginRight="20dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Doctor Dashboard"
+            android:textColor="#FFFFFF"
+            android:textSize="24dp" />
+
+        <TextView
+            android:id="@+id/departmentname"
+            android:layout_width="108dp"
+            android:layout_height="39dp"
+            android:text="ENTspecialist"
+            tools:ignore="MissingConstraints"
+            android:visibility = "gone"
+            tools:layout_editor_absoluteX="16dp"
+            tools:layout_editor_absoluteY="87dp" />
+
+
+    </RelativeLayout>
+
+    <GridLayout
+        android:columnCount="2"
+        android:rowCount="3"
+        android:alignmentMode="alignMargins"
+        android:columnOrderPreserved="false"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.cardview.widget.CardView
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_columnWeight="1"
+            android:layout_rowWeight="1"
+            app:cardElevation="6dp"
+            app:cardCornerRadius="12dp"
+            android:layout_margin="12dp"
+            >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <ImageView
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:src="@drawable/user" />
+
+
+                <TextView
+                    android:id="@+id/department3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="40dp"
+                    android:fontFamily="sans-serif-black"
+                    android:textSize="32dp"
+                    android:layout_marginLeft="40dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="40dp"
+                    android:fontFamily="sans-serif"
+                    android:text="ENT specialist"
+                    android:textSize="26dp"
+                    android:layout_marginLeft="40dp" />
+
+                <Button
+                    android:id="@+id/btn"
+                    android:layout_width="110dp"
+                    android:layout_height="40dp"
+                    android:layout_marginVertical="20dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/btncolor"
+                    android:elevation="5dp"
+                    android:text="Book Appointment"
+                    android:textAllCaps="false"
+                    android:textColor="#FFFBF8" />
+
+                <Button
+                    android:id="@+id/btn2"
+                    android:layout_width="110dp"
+                    android:layout_height="40dp"
+                    android:layout_marginVertical="5dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="89dp"
+                    android:background="@drawable/btncolor"
+                    android:elevation="5dp"
+                    android:text="View Details"
+                    android:textAllCaps="false"
+                    android:textColor="#FFFBF8"
+                    android:layout_marginRight="89dp" />
+
+
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView>
+
+        </androidx.cardview.widget.CardView>
+
+    </GridLayout>
+
+
+</LinearLayout>
+
+
+</ScrollView>
