--- a/app/src/main/res/layout/activity_patient.xml
+++ b/app/src/main/res/layout/activity_patient.xml
@@ -100,8 +100,7 @@
                     android:padding="16dp"
                     android:onClick="sendCall4"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    tools:ignore="OnClick">
+                    android:layout_height="match_parent">
 
                     <ImageView
                         android:src="@drawable/hs"
