--- a/app/src/main/res/layout/department_list_item.xml
+++ b/app/src/main/res/layout/department_list_item.xml
@@ -41,7 +41,8 @@
             android:textSize="26dp" />
 
         <Button
-            android:id="@+id/btn"
+            android:onClick="appointment"
+            android:id="@+id/appointment"
             android:layout_width="110dp"
             android:layout_height="40dp"
             android:layout_marginVertical="20dp"
